Secondary toolbar: user icon alignment fix

--- a/styles/components/toolbar.scss
+++ b/styles/components/toolbar.scss
@@ -612,6 +612,7 @@ body.gin--classic-toolbar {
   &.icon-user {
     padding-left: 0;
     margin-left: 8px;
+    margin-top: 2px;
   }
 }
 
